# signal-terminal

./: ARCHITECTURE.md  Cargo.toml  INTENT.md  README.md  build.rs  flake.nix  skills.md
examples/: canonical.nota
schema/: lib.schema
src/: introspection.rs  lib.rs
src/schema/: lib.rs  mod.rs
tests/: canonical_examples.rs  dependency_boundary.rs  introspection.rs  round_trip.rs
