[package]
name         = "signal-terminal"
version      = "0.2.0"
edition      = "2024"
rust-version = "1.89"
license      = "MIT OR Apache-2.0"
repository   = "https://github.com/LiGoldragon/signal-terminal"
description  = "Signal contract for Persona terminal transport control."
publish      = false
links        = "signal-terminal"
build        = "build.rs"

[lib]
name = "signal_terminal"
path = "src/lib.rs"

[features]
default = ["nota-text"]
nota-text = ["dep:nota-next", "signal-frame/nota-text"]

[dependencies]
nota-next    = { git = "https://github.com/LiGoldragon/nota-next.git", branch = "main", optional = true }
rkyv         = { version = "0.8", default-features = false, features = ["std", "bytecheck", "little_endian", "pointer_width_32", "unaligned"] }
signal-frame = { git = "https://github.com/LiGoldragon/signal-frame.git", branch = "main", default-features = false }
thiserror    = "2"

[build-dependencies]
schema-rust-next = { git = "https://github.com/LiGoldragon/schema-rust-next.git", branch = "main" }

[lints.rust]
unsafe_code = "forbid"
unused      = { level = "warn", priority = -1 }
dead_code   = "warn"
